CrvsParts: Add notification LED brightness slider
* https://github.com/xiaomi-sdm660/android_device_xiaomi_sdm660-common/commit/df6c75e09bf44636595793ec90de2c256c2ba7a7#diff-8545ebee94df9bbc7581beba0c3fb49a

--- a/res/xml/corvus_pref.xml
+++ b/res/xml/corvus_pref.xml
@@ -89,6 +89,18 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="notification_led"
+        android:title="@string/notification_title">
+        <com.corvus.parts.preferences.NotificationLedSeekBarPreference
+            android:key="notification_led_brightness"
+            android:title="@string/notification_led_title"
+            android:max="100"
+            app:min="1"
+            app:units="%"
+            android:defaultValue="100" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="torch"
         android:title="@string/torch_category">
         <com.corvus.parts.preferences.CustomSeekBarPreference
