--- a/res/drawable/ic_dirac.xml
+++ b/res/drawable/ic_dirac.xml
@@ -1,16 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
     android:width="24dp"
-    android:viewportWidth="511"
-    android:viewportHeight="512"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
     android:tint="@color/crvs_parts_icon_tint">
 
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m431.027,136.199c-5.52,0 -10,4.477 -10,10v329.602c0,8.934 -7.266,16.199 -16.195,16.199h-298.137c-8.93,0 -16.195,-7.266 -16.195,-16.199v-30c0,-5.523 -4.477,-10 -10,-10s-10,4.477 -10,10v30c0,19.961 16.238,36.199 36.195,36.199h298.137c19.957,0 36.195,-16.238 36.195,-36.199v-329.602c0,-5.523 -4.477,-10 -10,-10zM431.027,136.199"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m80.5,375.801c5.523,0 10,-4.477 10,-10v-329.602c0,-8.934 7.266,-16.199 16.195,-16.199h298.137c8.934,0 16.195,7.266 16.195,16.199v30c0,5.523 4.48,10 10,10 5.523,0 10,-4.477 10,-10v-30c0,-19.961 -16.238,-36.199 -36.195,-36.199h-298.137c-19.957,0 -36.195,16.238 -36.195,36.199v329.602c0,5.523 4.477,10 10,10zM80.5,375.801"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m255.766,58.945c-69.652,0 -126.32,56.664 -126.32,126.32 0,69.648 56.668,126.316 126.32,126.316s126.32,-56.668 126.32,-126.316c0,-69.656 -56.668,-126.32 -126.32,-126.32zM255.766,291.582c-58.625,0 -106.32,-47.691 -106.32,-106.316s47.695,-106.32 106.32,-106.32 106.32,47.695 106.32,106.32 -47.695,106.316 -106.32,106.316zM255.766,291.582"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m255.766,132.824c-28.914,0 -52.441,23.523 -52.441,52.441 0,28.914 23.527,52.438 52.441,52.438s52.438,-23.523 52.438,-52.438c0,-28.918 -23.523,-52.441 -52.438,-52.441zM255.766,217.703c-17.887,0 -32.441,-14.551 -32.441,-32.438 0,-17.891 14.555,-32.441 32.441,-32.441s32.438,14.551 32.438,32.441c0,17.887 -14.551,32.438 -32.438,32.438zM255.766,217.703"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m139.445,425.98c-5.523,0 -10,4.48 -10,10 0,5.523 4.477,10 10,10h64.477c5.523,0 10,-4.477 10,-10 0,-5.52 -4.477,-10 -10,-10zM139.445,425.98"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m307.605,425.98c-5.52,0 -10,4.48 -10,10 0,5.523 4.48,10 10,10h64.48c5.52,0 10,-4.477 10,-10 0,-5.52 -4.48,-10 -10,-10zM307.605,425.98"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m80.5,415.801c5.508,0 10,-4.492 10,-10 0,-5.508 -4.492,-10 -10,-10s-10,4.492 -10,10c0,5.508 4.492,10 10,10zM80.5,415.801"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="m431.027,96.199c-5.504,0 -10,4.492 -10,10 0,5.508 4.496,10 10,10 5.512,0 10.004,-4.492 10.004,-10 0,-5.508 -4.492,-10 -10.004,-10zM431.027,96.199"/>
+    <path
+        android:fillColor="#000000"
+        android:pathData="M12,1.4C6.2,1.4,1.4,6.2,1.4,12c0,5.8,4.8,10.6,10.6,10.6c5.8,0,10.6-4.8,10.6-10.6C22.6,6.2,17.8,1.4,12,1.4z M12,19.9c-4.4,0-7.9-3.6-7.9-7.9c0-4.4,3.6-7.9,7.9-7.9c4.4,0,7.9,3.6,7.9,7.9C19.9,16.4,16.4,19.9,12,19.9z M12,10.7 c-0.7,0-1.3,0.6-1.3,1.3c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3C13.3,11.3,12.7,10.7,12,10.7z M12,16c-2.2,0-4-1.8-4-4 c0-0.7-0.6-1.3-1.3-1.3c-0.7,0-1.3,0.6-1.3,1.3c0,3.7,3,6.6,6.6,6.6c0.7,0,1.3-0.6,1.3-1.3C13.3,16.6,12.7,16,12,16z M12,5.4 c-0.7,0-1.3,0.6-1.3,1.3C10.7,7.4,11.3,8,12,8c2.2,0,4,1.8,4,4c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3 C18.6,8.3,15.7,5.4,12,5.4z" />
 </vector>
