CrvsParts: Change KCAL Preview Image
Change to more colorfull image from google of course

Signed-off-by: Rafiester <rafi.haqqi@gmail.com>

--- a/res/xml/corvus_main.xml
+++ b/res/xml/corvus_main.xml
@@ -18,6 +18,7 @@
             app:min="-10"
             android:icon="@drawable/ic_mic"
             android:title="@string/microphone_gain"/>
+    </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/display_category">
         <com.corvus.parts.preferences.SecureSettingSwitchPreference
