--- a/res/xml/corvus_main.xml
+++ b/res/xml/corvus_main.xml
@@ -59,6 +59,31 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="selinux"
+        android:title="@string/selinux_category">
+
+        <Preference
+            android:key="selinux_explanation"
+            android:summary="@string/selinux_explanation_summary"
+            android:selectable="false"/>
+
+        <SwitchPreference
+            android:key="selinux_mode"
+            android:icon="@drawable/ic_selinux"
+            android:title="@string/selinux_mode_title"
+            android:summaryOn="@string/selinux_enforcing_summary"
+            android:summaryOff="@string/selinux_permissive_summary" />
+
+        <SwitchPreference
+            android:key="selinux_persistence"
+            android:icon="@drawable/ic_selinux_persistence"
+            android:title="@string/selinux_persistence_title"
+            android:summary="@string/selinux_persistence_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/torch_category">
        
         <com.corvus.parts.preferences.CustomSeekBarPreference
