--- a/CorvusParts/res/xml/corvus_main.xml
+++ b/CorvusParts/res/xml/corvus_main.xml
@@ -18,6 +18,33 @@
             app:min="-10"
             android:icon="@drawable/ic_mic"
             android:title="@string/microphone_gain"/>
+
+        <com.corvus.parts.preferences.SecureSettingSwitchPreference
+            android:defaultValue="false"
+            android:key="dirac_enabled"
+            android:summary="@string/dirac_summary"
+            android:title="@string/dirac_title"
+            android:icon="@drawable/ic_dirac" />
+
+        <com.corvus.parts.preferences.SecureSettingListPreference
+            android:defaultValue="0"
+            android:dependency="dirac_enabled"
+            android:entries="@array/dirac_headset_pref_entries"
+            android:entryValues="@array/dirac_headset_pref_values"
+            android:key="dirac_headset_pref"
+            android:summary="%s"
+            android:title="@string/dirac_headset_title"
+            android:icon="@drawable/ic_headphones" />
+
+        <com.corvus.parts.preferences.SecureSettingListPreference
+            android:defaultValue="0,0,0,0,0,0,0"
+            android:dependency="dirac_enabled"
+            android:entries="@array/dirac_preset_pref_entries"
+            android:entryValues="@array/dirac_preset_pref_values"
+            android:key="dirac_preset_pref"
+            android:summary="%s"
+            android:title="@string/dirac_preset_title"
+            android:icon="@drawable/ic_preset" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/display_category">
