CrvsParts: Improv Kcal -Added 3 Image for Kcal & Dots image * Original commit https://github.com/DerpFest-Devices/device_oneplus_msm8998-common/commit/1c73631a36fe16c402a21792d50b155a17ca2bb2#diff-06926c26ccade55a57d71e21e54002b1
-Change ugly name KCal to Kcal
-Remove icon space for kcal preference

Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/CorvusParts/res/xml/corvus_main.xml
+++ b/CorvusParts/res/xml/corvus_main.xml
@@ -69,7 +69,7 @@
             android:summary="@string/device_kcal_summary" >
             <intent
                 android:action="android.intent.action.MAIN"
-                android:targetClass="com.corvus.parts.kcal.KCalSettingsActivity"
+                android:targetClass="com.corvus.parts.kcal.KcalSettingsActivity"
                 android:targetPackage="com.corvus.parts.kcal"/>
         </Preference>
 
