--- a/CorvusParts/res/layout/image_layout.xml
+++ b/CorvusParts/res/layout/image_layout.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:id="@+id/imageView" />
 
